# deviation

./: .gitattributes  .gitignore  .gitmodules  .hgignore  .travis.yml  ChangeLog.md  DEVELOPERS  MULTI_PORTING.md  Makefile  Makefile.emu  README  README-OSX  README.md  dfu.py  dmake  install_nightlies.tar.enc  main.c  tx.h
src/: .clang-format  CMakeLists.txt  Makefile  Makefile.inc  UPDATING.md  autodimmer.c  autodimmer.h  battery.c  buttons.c  buttons.h  chanutils.c  common.h  crsf.h  curves.c  datalog.c  datalog.h  emu_devo8.elf  extended_audio.c  extended_audio.h  inputs.c  main.c  misc.c  misc.h  mixer.c  mixer.h  mixer_simple.c  mixer_simple.h  mixer_standard.c  mixer_standard.h  model_template.ini  music.c  music.h  protospi.c  push  radio.c  remap_channels.c  rftools.c  rftools.h  rtc.c  rtc.h  (+13 more)
src/common/: fonts_qvga.c  fonts_qvga.h  lcd_qvga.c
src/config/: .model.c.swp  alertcfg.c  alertcfg.h  config.c  config.h  display.c  display.h  hardware.c  ini.c  ini.h  language.c  model.c  model.h  pagecfg.h  tx.c  tx.h  voice.c  voice.h
src/fonts/: 04b03.bdf  11normal.bdf  12normal.bdf  15normal.bdf  18bold.bdf  23bold.bdf  f12e.bdf  ia9211.bdf  tw8816.bdf
src/fs/: Makefile.inc
src/gui/: bargraph.c  button.c  dialog.c  font.c  font.h  gui.c  gui.h  image.c  keyboard.c  label.c  listbox.c  rect.c  scrollable.c  scrollbar.c  textsel.c  xygraph.c
src/images/: config.ini
src/libopencm3/: .gitignore  GIT_VERSION
src/media/: config.ini  sound.ini
src/misc/: fgets.c  misc.c  printf.c
src/models/: model1.ini
src/osx/: genspeech  readme.txt
src/pages/: calibrate_page.c  calibrate_page.h  chantest_page.c  chantest_page.h  dialogs.c  icons.c  icons.h  lang_select.c  main_config.c  main_config.h  main_page.c  main_page.h  mixer_curves.c  mixer_limits.c  mixer_page.c  mixer_page.h  mixer_setup.c  model_config.c  model_loadsave.c  model_page.c  model_page.h  model_safe.c  model_template.c  pages.c  pages.h  reorder_list.c  scanner_page.c  scanner_page.h  telemtest_page.c  telemtest_page.h  test_page.c  timer_page.c  timer_page.h  trim_page.c  trim_page.h  usb_page.c  usb_page.h
src/protocol/: Copy of bayang_nrf24l01.c  Makefile.inc  README.modules  assan_nrf24l01.c  bayang2_nrf24l01.c  bayang_nrf24l01.c  (+93 more)
(+827 files in other folders)
